<resources>
    <string name="app_name">MovieList</string>
    <string name="txt_onboarding1_line1">A lot of good movies and the detail</string>
    <string name="txt_onboarding1_line2">movie information you can</string>
    <string name="txt_onboarding1_line3">discover on this App</string>
    <string name="image_view">image_view</string>
    <string name="txt_onboarding2_line1">Enjoy your movie, don’t forget to</string>
    <string name="txt_onboarding2_line2">grab a snack and drink</string>
    <string name="txt_onboarding2_line3">before your movie start</string>
    <string name="welcome">Welcome,</string>
    <string name="txt_please_sign_in">Please sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get Started,</string>
    <string name="please_create">Please create an account</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your email address and we would send you a link to reset your password</string>
    <string name="check_your_e_mail">Check your E-mail</string>
    <string name="we_have_send_your_a_reset_password">We have send your a reset password</string>
    <string name="link_on_your_registered_e_mail_address">link on your registered e-mail address</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_email">user_email@gmail.com</string>
    <string name="profile_name">Profile Name</string>
    <string name="flora_ulysses"><![CDATA[Flora & Ulysses]]></string>
    <string name="release_date">02/19/2021 (US)</string>
    <string name="movie_genre">Family, Adventure, Comedy, Fantasy</string>
    <string name="txt_synopsis">When Flora rescues a squirrel she names\nUlysses, she is amazed to discover he\npossesses unique superhero powers, which\ntake them on an adventure of humorous\ncomplications that ultimately change Floras\nlife and her outlook forever.</string>
    <string name="user">Vote</string>
    <string name="score">Count</string>
    <string name="score_percent">500</string>
    <string name="synopsis">Synopsis</string>
    <string name="user_score">Vote Count</string>
    <string name="movie_list">Movie List</string>
    <string name="txt_error">Not empty</string>
    <string name="txt_error_password">Password Mismatch</string>
    <string name="txt_user">User</string>
    <string name="txt_error_register">Register Failed</string>
</resources>