<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    tools:context=".activity.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_50"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_35"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_in_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/txt_please_sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="@+id/tv_sign_in_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_title" />

        <EditText
            android:id="@+id/et_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_40"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_email" />

        <TextView
            android:id="@+id/tv_sign_in_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_subtitle" />

        <TextView
            android:id="@+id/tv_sign_in_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_in_email" />

        <EditText
            android:id="@+id/et_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_40"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_password" />

        <TextView
            android:id="@+id/tv_sign_in_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_in_password" />

        <ImageButton
            android:id="@+id/ib_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@color/color_main"
            android:contentDescription="@string/image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_forgotpass"
            app:srcCompat="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tv_sign_in_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_sign_in" />

        <TextView
            android:id="@+id/tv_sign_in_answ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textColor="@color/orange_color"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_ques" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>