<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backdrop_img" />

        <ImageView
            android:id="@+id/iv_detail_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_90"
            android:contentDescription="@string/image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_detail_backdrop"
            app:srcCompat="@drawable/poster_movie" />

        <ImageButton
            android:id="@+id/ib_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back2" />

        <TextView
            android:id="@+id/tv_detail_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/flora_ulysses"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/sp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_poster" />

        <TextView
            android:id="@+id/tv_detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/release_date"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_movie_title"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_title" />

        <TextView
            android:id="@+id/tv_detail_movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/movie_genre"
            android:textColor="@color/color_main_gray"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_movie_title"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date" />

        <TextView
            android:id="@+id/tv_detail_user_score_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_movie_genre"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_genre" />

        <TextView
            android:id="@+id/tv_detail_user_score_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_user_score_line1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_user_score_line1"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_user_score_line1" />

        <ImageView
            android:id="@+id/iv_detail_user_score"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:contentDescription="@string/image_view"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_user_score_line2"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_movie_genre"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_user_score_line2"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_genre"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/view_count" />

        <TextView
            android:id="@+id/tv_detail_user_score_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/score_percent"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@+id/iv_detail_user_score"
            app:layout_constraintEnd_toEndOf="@+id/iv_detail_user_score"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="@+id/iv_detail_user_score"
            app:layout_constraintTop_toTopOf="@+id/iv_detail_user_score"
            app:layout_constraintVertical_bias="0.562" />

        <TextView
            android:id="@+id/tv_detail_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/synopsis"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_user_score_line2" />

        <TextView
            android:id="@+id/tv_detail_synopsis_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:maxLines="10"
            android:layout_marginEnd="@dimen/dp_40"
            android:fontFamily="@font/poppins_light"
            android:text="@string/txt_synopsis"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_synopsis" />

        <ImageButton
            android:id="@+id/ib_detail_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_30"
            android:background="@color/color_main"
            android:contentDescription="@string/image_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_synopsis_desc"
            app:srcCompat="@drawable/btn_trailer" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>