<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    tools:context=".activity.ProfileActivity">

    <ImageButton
        android:id="@+id/ib_profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/color_main"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_img"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_100"
        android:src="@drawable/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_profile_back" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/profile_name"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_img" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/user_email"
        android:textColor="@color/color_main_gray"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

    <TextView
        android:id="@+id/tv_profile_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/ib_profile_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@color/color_main"
        android:contentDescription="@string/image_view"
        app:layout_constraintBottom_toBottomOf="@+id/tv_profile_sign_out"
        app:layout_constraintEnd_toStartOf="@+id/tv_profile_sign_out"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_sign_out"
        app:srcCompat="@drawable/sign_out_img" />

</androidx.constraintlayout.widget.ConstraintLayout>