<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    tools:context=".activity.Onboarding2Activity">

    <ImageView
        android:id="@+id/iv_onboarding2"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_200"
        android:layout_marginTop="@dimen/dp_100"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding2_img" />

    <TextView
        android:id="@+id/tv_onboarding2_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_onboarding2_line1"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dot_onboarding2" />

    <ImageView
        android:id="@+id/iv_dot_onboarding2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toEndOf="@+id/iv_onboarding2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/iv_onboarding2"
        app:layout_constraintTop_toBottomOf="@+id/iv_onboarding2"
        app:srcCompat="@drawable/dot_boarding2" />

    <TextView
        android:id="@+id/tv_onboarding2_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_onboarding2_line2"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@+id/tv_onboarding2_line1"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding2_line1"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding2_line1" />

    <TextView
        android:id="@+id/tv_onboarding2_line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_onboarding2_line3"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@+id/tv_onboarding2_line2"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding2_line2"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding2_line2" />

    <ImageButton
        android:id="@+id/ib_onboarding2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@color/color_main"
        android:contentDescription="@string/image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/btn_next" />

</androidx.constraintlayout.widget.ConstraintLayout>